# Temp_GL_Template

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.sh  setup_vcpkg.bat  vcpkg.json
src/: main.cpp
